dxscale/core/security/auth/objects/Auth_Credentials_Override__c/Auth_Credentials_Override__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Temporary overrides of auth credentials, useful for stubbing, testing in lower envs before prod.</description>
    <label>Auth Credentials Override</label>
</CustomObject>