dxscale/core/security/auth/objects/Auth_Credentials_Override__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>The endpoint to override</description>
    <inlineHelpText>The endpoint to override</inlineHelpText>
    <label>URL Endpoint</label>
    <type>TextArea</type>
</CustomField>