dxscale/core/security/auth/objects/Auth_Credentials_Override__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>The Named credential name to use as override</description>
    <inlineHelpText>Allows you to override the authentication credentials</inlineHelpText>
    <label>Named Credential</label>
    <length>150</length>
    <type>Text</type>
</CustomField>