dxscale/core/security/auth/objects/Auth_Credentials_Override__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>The scope you are now protecting</description>
    <inlineHelpText>Combined with other params allows you to change what is protected</inlineHelpText>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>